# revelio

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: test_frameworks.yml
docs/blog/: breaking-gemini.md  bypassing-claude.md  claude-fortress-analysis.md  intensive-alignment-paradox.md  multi-turn-jailbreaking.md
revelio/: __init__.py  red_team.py  telemetry.py  utils.py
revelio/attacks/attack_simulator/: attack_simulator.py
revelio/attacks/multi_turn/: base_multi_turn_attack.py  types.py  utils.py
revelio/attacks/single_turn/: base_single_turn_attack.py
revelio/cli/: config.py  main.py
revelio/confident/: api.py
revelio/frameworks/: frameworks.py  risk_category.py  utils.py
revelio/frameworks/aegis/: aegis.py
revelio/guardrails/: guardrails.py
revelio/red_teamer/: api.py  red_teamer.py  risk_assessment.py  utils.py
revelio/risks/: risks.py
revelio/vulnerabilities/: base_vulnerability.py  types.py
tests/: conftest.py  test_attacks.py  test_errors.py  test_frameworks.py  test_imports.py  test_risk_assessment.py  test_risks.py  test_test_case.py  test_utils.py  test_vulnerabilities.py
tests/test_core/: test_model_callback.py  test_red_teaming.py
tests/test_frameworks/: test_aegis.py  test_beavertails.py  test_mitre.py  test_nist.py  test_owasp_top_10.py  test_owasp_top_10_asi.py
tests/test_guardrails/: test_cybersecurity_guard.py  test_guardrails.py  test_hallucination_guard.py  test_illegal_guard.py  test_privacy_guard.py  test_prompt_injection_guard.py  test_topical_guard.py  test_toxicity_guard.py
(+219 files in other folders)
